# retail-demand-lab

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes_health.py  routes_train.py
app/services/: data_generator.py  feature_store.py  trainer.py
tests/: test_train.py
